--- a/app/src/form/_dropdown.scss
+++ b/app/src/form/_dropdown.scss
@@ -1,6 +1,6 @@
 .Dropdown {
     color: $clr-dark-blue;
-    display: inline-block;
+    display: flex;
     margin: 0.18em 0.5em;
 }
 
