--- a/app/src/visualization/PulseInstructionsPage.scss
+++ b/app/src/visualization/PulseInstructionsPage.scss
@@ -1,11 +1,7 @@
 .pulseInstructions {
-  img.pulse {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    justify-content: center;
-    flex-flow: column wrap;
-    width: 25%;
-    height: auto;
-  }
+
+.pulse {
+  margin: auto 5px auto 5px;
+}
+
 }
